--- a/apps/stock/app/search/index.html
+++ b/apps/stock/app/search/index.html
@@ -86,6 +86,47 @@
                     </section>
                 </section>
             </section>
+            <section class="h-80 flex w-full justify-center gap-x-52">
+                <section>
+                    <h3 class="text-2xl">Total Revenue</h3>
+                    <ul id="total-revenue">
+                    </ul>
+                </section>
+            </section>
+            <section class="h-80 flex w-full justify-center gap-x-52">
+                <section>
+                    <h3 class="text-2xl">Total Assets</h3>
+                    <ul id="total-assets">
+                    </ul>
+                </section>
+                <section>
+                    <h3 class="text-2xl">Cash</h3>
+                    <ul id="cash">
+                    </ul>
+                </section>
+                <section>
+                    <h3 class="text-2xl">Total Liabilities</h3>
+                    <ul id="total-liabilities">
+                    </ul>
+                </section>
+            </section>
+            <section class="h-80 flex w-full justify-center gap-x-52">
+                <section>
+                    <h3 class="text-2xl">Net Income</h3>
+                    <ul id="net-income">
+                    </ul>
+                </section>
+                <section>
+                    <h3 class="text-2xl">Operating Cash-flow</h3>
+                    <ul id="operating-cash-flow">
+                    </ul>
+                </section>
+                <section>
+                    <h3 class="text-2xl">Dividend Payout</h3>
+                    <ul id="div-payout">
+                    </ul>
+                </section>
+            </section>
         </main>
         <script type="module" src="http://localhost:5169/src/search.ts"></script>
     </body>
