--- a/apps/stock/app/search/index.html
+++ b/apps/stock/app/search/index.html
@@ -86,47 +86,55 @@
                     </section>
                 </section>
             </section>
-            <section class="h-80 flex w-full justify-center gap-x-52">
-                <section>
+            <section class="h-[500px] flex w-full justify-center gap-x-10">
+                <section class="grid place-items-center">
                     <h3 class="text-2xl">Total Revenue</h3>
-                    <ul id="total-revenue">
-                    </ul>
+                    <div style="width: 400px" class="h-full">
+                        <canvas id="total-revenue"></canvas>
+                    </div>
                 </section>
             </section>
-            <section class="h-80 flex w-full justify-center gap-x-52">
-                <section>
+            <section class="h-[500px] flex w-full justify-center gap-x-10">
+                <section class="grid place-items-center">
                     <h3 class="text-2xl">Total Assets</h3>
-                    <ul id="total-assets">
-                    </ul>
+                    <div style="width: 400px" class="h-full">
+                        <canvas id="total-assets"></canvas>
+                    </div>
                 </section>
-                <section>
+                <section class="grid place-items-center">
                     <h3 class="text-2xl">Cash</h3>
-                    <ul id="cash">
-                    </ul>
+                    <div style="width: 400px" class="h-full">
+                        <canvas id="cash"></canvas>
+                    </div>
                 </section>
-                <section>
+                <section class="grid place-items-center">
                     <h3 class="text-2xl">Total Liabilities</h3>
-                    <ul id="total-liabilities">
-                    </ul>
+                    <div style="width: 400px" class="h-full">
+                        <canvas id="total-liabilities"></canvas>
+                    </div>
                 </section>
             </section>
-            <section class="h-80 flex w-full justify-center gap-x-52">
-                <section>
+            <section class="h-80 flex w-full justify-center gap-x-10">
+                <section class="grid place-items-center">
                     <h3 class="text-2xl">Net Income</h3>
-                    <ul id="net-income">
-                    </ul>
+                    <div style="width: 400px" class="h-full">
+                        <canvas id="net-income"></canvas>
+                    </div>
                 </section>
-                <section>
+                <section class="grid place-items-center">
                     <h3 class="text-2xl">Operating Cash-flow</h3>
-                    <ul id="operating-cash-flow">
-                    </ul>
+                    <div style="width: 400px" class="h-full">
+                        <canvas id="operating-cash-flow"></canvas>
+                    </div>
                 </section>
-                <section>
+                <section class="grid place-items-center">
                     <h3 class="text-2xl">Dividend Payout</h3>
-                    <ul id="div-payout">
-                    </ul>
+                    <div style="width: 400px" class="h-full">
+                        <canvas id="div-payout"></canvas>
+                    </div>
                 </section>
             </section>
+            <section id="mychart"></section>
         </main>
         <script type="module" src="http://localhost:5169/src/search.ts"></script>
     </body>
