--- a/apps/stock/app/search/index.html
+++ b/apps/stock/app/search/index.html
@@ -12,8 +12,8 @@
     <body>
         <section class="grid place-items-center p-4">
             <form class="flex gap-3 align-items-center justify-center">
-                <label for="symbol" class="grid place-items-center text-xl">provide symbol: </label>
-                <input type="text" id="symbol" name="symbol" class="border-sky-500 border-2 rounded-md text-xl pl-2">
+                <label for="symbol-input" class="grid place-items-center text-xl">provide symbol: </label>
+                <input type="text" id="symbol-input" name="symbol-input" class="border-sky-500 border-2 rounded-md text-xl pl-2">
                 <button class="bg-sky-500 p-2 rounded-md text-sky-50 text-xl" id="searchbtn">search</button>
             </form>
         </section>
