it ain't pretty, but it works

--- a/apps/stock/app/search/index.html
+++ b/apps/stock/app/search/index.html
@@ -10,12 +10,13 @@
         <title>Search</title>
     </head>
     <body>
-        <section class="grid place-items-center p-4">
+        <section class="grid place-items-center p-4 relative">
             <form class="flex gap-3 align-items-center justify-center">
                 <label for="symbol-input" class="grid place-items-center text-xl">provide symbol: </label>
-                <input type="text" id="symbol-input" name="symbol-input" class="border-sky-500 border-2 rounded-md text-xl pl-2">
+                <input type="text" id="symbol-input" name="symbol-input" autocomplete="off" class="border-sky-500 border-2 rounded-md text-xl pl-2">
                 <button class="bg-sky-500 p-2 rounded-md text-sky-50 text-xl" id="searchbtn">search</button>
             </form>
+            <section class="flex flex-col w-1/4 absolute mt-44 bg-neutral-300" id="suggest"></section>
         </section>
         <main class="grid place-items-center">
             <section class="flex gap-2">
