--- a/apps/stock/app/search/index.html
+++ b/apps/stock/app/search/index.html
@@ -16,7 +16,6 @@
                 <input type="text" id="symbol-input" name="symbol-input" autocomplete="off" class="border-sky-500 border-2 rounded-md text-xl pl-2">
                 <button class="bg-sky-500 p-2 rounded-md text-sky-50 text-xl" id="searchbtn">search</button>
             </form>
-            <section class="flex flex-col w-1/4 absolute mt-44 bg-neutral-300" id="suggest"></section>
         </section>
         <main class="grid place-items-center">
             <section class="flex gap-2">
@@ -98,6 +97,18 @@
                     <h3 class="text-2xl">Total Revenue</h3>
                     <div style="width: 400px" class="h-full">
                         <canvas id="total-revenue"></canvas>
+                    </div>
+                </section>
+                <section class="grid place-items-center">
+                    <h3 class="text-2xl">EBITDA</h3>
+                    <div style="width: 400px" class="h-full">
+                        <canvas id="ebitda"></canvas>
+                    </div>
+                </section>
+                <section class="grid place-items-center">
+                    <h3 class="text-2xl">Operating Income</h3>
+                    <div style="width: 400px" class="h-full">
+                        <canvas id="operating-income"></canvas>
                     </div>
                 </section>
             </section>
