basic auth start

--- a/apps/stock/app/search/index.html
+++ b/apps/stock/app/search/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <section class="grid place-items-center p-4 relative">
-            <form class="flex gap-3 align-items-center justify-center">
+            <form class="flex gap-3 align-items-center justify-center" id="search">
                 <label for="symbol-input" class="grid place-items-center text-xl">provide symbol: </label>
                 <input type="text" id="symbol-input" name="symbol-input" autocomplete="off" class="border-sky-500 border-2 rounded-md text-xl pl-2">
                 <button class="bg-sky-500 p-2 rounded-md text-sky-50 text-xl" id="searchbtn">search</button>
