--- a/apps/axum-htmx/index.html
+++ b/apps/axum-htmx/index.html
@@ -13,16 +13,19 @@
         </style>
     </head>
     <body>
-        <form hx-post="/store" hx-target="#todos" class="grid place-items-center p-4 gap-8">
-            <input id="title" name="title" type="text" class="border-2 border-indigo-500">
-            <button type="submit" class="bg-indigo-500 text-indigo-100 px-4 py-2 rounded-md">Submit</button>
-        </form>
-        <main id="content" class="grid place-items-center gap-4">
-            <h1>Todos:</h1>
-            <div id="todos">
-                <!--#-->
-            </div>
-            <div id="item"></div>
-        </main>
+        <div class="ah-resp">
+            <form hx-post="/store" hx-target="#todos" class="flex flex-col gap-4 p-3 max-w-xs">
+                <h2 class="text-2xl">Add Todo</h2>
+                <input id="title" name="title" type="text" class="border-2 border-indigo-500">
+                <button type="submit" class="bg-indigo-500 text-indigo-100 px-4 py-2 rounded-md">Submit</button>
+            </form>
+            <main class="flex flex-col min-h-screen gap-2 items-center" id="content">
+                <h2 class="text-2xl">Todos:</h2>
+                <div id="todos">
+                    <!--#-->
+                </div>
+                <div id="item"></div>
+            </main>
+        </div>
     </body>
 </html>
