feat: better app

--- a/apps/chat/chat-app/rooms/index.html
+++ b/apps/chat/chat-app/rooms/index.html
@@ -7,13 +7,12 @@
         <script type="module" src="http://localhost:5985/@vite/client"></script>
         <script defer type="module" src="http://localhost:5985/src/main.ts"></script>
         <link rel="stylesheet" href="http://localhost:5985/src/index.css">
-        <title>chat</title>
+        <title>chat - rooms</title>
     </head>
     <body>
         <main class="grid place-items-center h-screen">
             <article id="content" class="grid place-items-center gap-4">
-                <a href="/rooms" class="px-4 py-2 bg-sky-400 rounded-md text-xl text-sky-50">join a room</a>
-                <a href="/create" class="px-4 py-2 bg-sky-400 rounded-md text-xl text-sky-50">create a room</a>
+                <!--#-->
             </article>
         </main>
     </body>
