--- a/apps/stock/static/index.html
+++ b/apps/stock/static/index.html
@@ -4,6 +4,21 @@
         <meta charset="UTF-8">
         <title>Stock App</title>
         <script src="https://unpkg.com/htmx.org@1.9.4"></script>
+        <style>
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+        </style>
     </head>
     <body>
         <main>
@@ -11,7 +26,7 @@
                 <h1>Stock App</h1>
                 <section>
                     <form
-                        hx-get="/api/search"
+                        hx-get="/api/load"
                         hx-target="#stock"
                         >
                         <section>
