feat: (stock) email sign up endpoint

--- a/apps/stock/public/static/signup/index.html
+++ b/apps/stock/public/static/signup/index.html
@@ -15,7 +15,7 @@
     <main>
         <article>
             <section>
-                <form>
+                <form hx-post="/email/signup">
                     <section>
                         <label for="name">Name:</label>
                         <input type="text" name="name" id="name">
