--- a/apps/stock/public/static/index.html
+++ b/apps/stock/public/static/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <title>Stock App</title>
         <script src="https://unpkg.com/htmx.org@1.9.4"></script>
+        <link rel="stylesheet" href="/css/style.css">
+        <script src="main.umd.js"></script>
         <style>
 .loader {
     border: 16px solid #f3f3f3; /* Light grey */
@@ -24,6 +26,18 @@
         <header>
             <section>
                 <h1>Stock App</h1>
+            </section>
+            <section>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="/">home</a>
+                        </li>
+                        <li>
+                            <a href="/signup">sign up</a>
+                        </li>
+                    </ul>
+                </nav>
             </section>
         </header>
         <main>
