--- a/apps/stock/public/static/index.html
+++ b/apps/stock/public/static/index.html
@@ -5,20 +5,20 @@
     <title>Stock App</title>
     <!-- if development -->
     <script type="module" src="http://localhost:5183/@vite/client"></script>
-    <script type="module" src="http://localhost:5183/src/main.ts"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.6"></script>
     <link rel="stylesheet" href="http://localhost:5183/styles/index.css">
 </head>
 <body>
-    <header class="flex py-5 bg-blue-500">
+    <header hx-boost="true" class="flex py-5 bg-blue-500">
         <section class="w-1/3 grid place-items-center">
             <a href="/">
                 <h1 class="text-2xl text-white">Stock App</h1>
             </a>
         </section>
-        <section class="grow grid place-items-center">
+        <nav class="grow grid place-items-center">
             <ul>
                 <li>
-                    <a href="/">
+                    <a href="/signin">
                         <p class="bg-blue-600 text-white text-xl
                         px-2 py-1 rounded-md
                         transtion duration-300 ease-in-out
@@ -26,7 +26,7 @@
                     </a>
                 </li>
             </ul>
-        </section>
+        </nav>
     </header>
     <main>
         <h2>Stock app</h2>
