chore: move auth routes to auth.go

--- a/apps/stock/public/static/index.html
+++ b/apps/stock/public/static/index.html
@@ -16,7 +16,15 @@
             </a>
         </section>
         <nav class="grow grid place-items-center">
-            <ul>
+            <ul class="flex items-center gap-5">
+                <li>
+                    <a href="/search">
+                        <p class="bg-blue-600 text-white text-xl
+                        px-2 py-1 rounded-md
+                        transtion duration-300 ease-in-out
+                        hover:bg-blue-800">Search</p>
+                    </a>
+                </li>
                 <li>
                     <a href="/signin">
                         <p class="bg-blue-600 text-white text-xl
