--- a/apps/stock/public/static/index.html
+++ b/apps/stock/public/static/index.html
@@ -8,7 +8,7 @@
     <script src="https://unpkg.com/htmx.org@1.9.6"></script>
     <link rel="stylesheet" href="http://localhost:5183/styles/index.css">
 </head>
-<body>
+<body id="top">
     <header hx-boost="true" class="flex py-5 bg-blue-500">
         <section class="w-1/3 grid place-items-center">
             <a href="/">
