feat: (stock) charts

--- a/apps/stock/public/static/index.html
+++ b/apps/stock/public/static/index.html
@@ -6,6 +6,7 @@
     <!-- if development -->
     <script type="module" src="http://localhost:5183/@vite/client"></script>
     <script src="https://unpkg.com/htmx.org@1.9.6"></script>
+    <script src="https://cdn.plot.ly/plotly-2.26.0.min.js" charset="utf-8"></script>
     <link rel="stylesheet" href="http://localhost:5183/styles/index.css">
 </head>
 <body id="top">
