--- a/apps/algorithms/algs-app/index.html
+++ b/apps/algorithms/algs-app/index.html
@@ -8,6 +8,7 @@
         <title>Algorithms</title>
     </head>
     <body>
+        <div id="app"></div>
         <script type="module" src="http://localhost:4287/src/main.ts"></script>
     </body>
 </html>
